<resources>
    <string name="app_name">ArtHub Organizer</string>
    <string name="start_label">ArtHub\nOrganizer</string>

    <!-- Days of week -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wedesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Text -->
    <string name="loginTitleLabel">Login</string>
    <string name="registerTitleLabel">Registration</string>
    <string name="createAdminAccountLabel">Creating an administrator account</string>
    <string name="helloLabel">"Hello "</string>
    <string name="hourLabel">"Time: "</string>
    <string name="dateLabel">"Date: "</string>
    <string name="accessLabel">Access</string>
    <string name="definitelyLabel">Are you sure?</string>
    <string name="clickLabel">Click</string>

    <string name="scanedQRLabel">QR code scanned</string>
    <string name="ticketIsActualLabel">The ticket is valid</string>
    <string name="ticketIsNotActualLabel">The ticket is invalid</string>
    <string name="ticketLabel">Ticket</string>
    <string name="currencyLabel">" zł"</string>
    <string name="numberOfTicketsLabel">"Number of tickets: "</string>
    <string name="scannedLabel">"Scanned on: "</string>
    <string name="notScannedLabel">Not scanned</string>
    <string name="priceLabel">"Price: "</string>
    <string name="rowNumberLabel">"Row: "</string>
    <string name="emailInformationLabel">"Email: "</string>
    <string name="ticketInformationLabel">"Ticket: "</string>
    <string name="placeNumberLabel">", place: "</string>

    <string name="noEventsLabel">No events on this day</string>
    <string name="noClassLabel">No classes on this day</string>

    <string name="nextClassesLabel">"The next class: "</string>

    <string name="weekLabel">week</string>
    <string name="monthLabel">month</string>

    <string name="lackOfCultureHouseLabel">No assigned cultural center</string>
    <string name="changeTimeLabel">"You change the date of classes: "</string>

    <!-- Form labels -->
    <string name="loginLabel">Login</string>
    <string name="enterLoginLabel">Enter login</string>

    <string name="passwordLabel">Password</string>
    <string name="repeatPasswordLabel">Repeat password</string>
    <string name="enterPasswordLabel">Enter password</string>

    <string name="nameLabel">First name</string>
    <string name="enterNameLabel">Enter first name</string>

    <string name="nameCultureHouseLabel">Name of the cultural center</string>
    <string name="enterNameCultureHouseLabel">Enter name of the cultural center</string>

    <string name="emailLabel">E-mail address</string>
    <string name="enterEmailLabel">Enter e-mail address</string>

    <string name="surnameLabel">Surname</string>
    <string name="enterSurnameLabel">Enter surname</string>

    <string name="eventNameLabel">Name</string>
    <string name="enterEventNameLabel">Enter name</string>

    <string name="roomLabel">Room</string>

    <string name="priceOfTicketLabel">Ticket price</string>
    <string name="normalLabel">Regular</string>
    <string name="reducedLabel">Reduced</string>

    <string name="placesLabel">Places</string>
    <string name="rowsLabel">Rows</string>
    <string name="placesInRowLabel">Places in row</string>

    <string name="dateOfBirthLabel">Date of birth</string>

    <string name="workerLabel">Leader</string>
    <string name="periodLabel">Duration of classes</string>

    <string name="periodicityLabel">Periodicity</string>

    <string name="numberLabel">Quantity</string>
    <string name="daysLabel">Days of the week</string>

    <string name="phoneNumberLabel">Phone number</string>
    <string name="enterPhoneNumberLabel">Enter phone number</string>

    <string name="activateLabel">Activate</string>
    <string name="activateTitleLabel">Account activation</string>

    <string name="timeLabel">Time:</string>

    <!-- Hints -->
    <string name="periodicityHintLabel">How often classes are repeated</string>
    <string name="hintPhoneNumber">For underage participants: Parent\'s phone number (enter without spaces or area code)</string>
    <string name="hintEmail">For underage participants: Parent\'s e-mail</string>
    <string name="activateAccountHelperText">If you already had an account, log in using your old password</string>

    <string name="selectStudentLabel">Select a student</string>
    <string name="DatePickerSelectData">Select a date</string>
    <string name="TimePickerSelectHour">Select an hour</string>

    <!-- Buttons -->
    <string name="signInButtonLabel">Sign in</string>
    <string name="signUpButtonLabel">Sign up</string>
    <string name="addOfficeWorkerButtonLabel">Adding an office employee</string>
    <string name="addWorkerButtonLabel">Adding an instructor</string>
    <string name="changeOfficeWorkerButtonLabel">Management of office employees</string>
    <string name="addEventButtonLabel">Adding an event</string>
    <string name="changeEventButtonLabel">Event management</string>
    <string name="addClassButtonLabel">Adding classes permanently</string>
    <string name="changeClassButtonLabel">Management of permanent classes</string>
    <string name="changeCultureHouseButtonLabel">Management of a cultural center</string>
    <string name="changeStudentsButtonLabel">Managing course participants</string>
    <string name="logOutButtonLabel">Log out</string>
    <string name="sellTicketButtonLabel">Selling tickets</string>
    <string name="checkTicketButtonLabel">Checking tickets</string>
    <string name="checkFrequencyButtonLabel">Check attendance / see class schedule</string>
    <string name="studentsDataButtonLabel">Participant data</string>
    <string name="addButtonLabel">Add</string>
    <string name="changeButtonLabel">Confirm</string>
    <string name="deleteButtonLabel">Delete</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="selectButtonLabel">Select</string>
    <string name="changeStudentsClassButtonLabel">Manage class participants</string>
    <string name="addTicketToBillButtonLabel">Add a ticket to the bill</string>
    <string name="sellButtonLabel">Sell</string>
    <string name="addNextDayButtonLabel">Add the next day</string>
    <string name="scanButtonLabel">Scan more</string>
    <string name="changeWorkerButtonLabel">Managing instructors</string>

    <!-- Email values -->
    <string name="qr_code_pdf">Event ticket</string>
    <string name="itsYourTicetLabel">Here are your tickets</string>

    <!-- NavBar -->
    <string name="navBarAddChangeRooms">Manage a cultural center (rooms)</string>
    <string name="navBarAddClass">Add a class</string>
    <string name="navBarAddEvent">Add an event</string>
    <string name="navBarAddOfficeWorker">Add an office employee</string>
    <string name="navBarAddStudent">Add a participant</string>
    <string name="navBarAddWorker">Add an instructor</string>
    <string name="navBarChangeClasses">Manage your classes</string>
    <string name="navBarChangeEvents">Manage events</string>
    <string name="navBarChangeOfficeWorkers">Manage office employees</string>
    <string name="navNarChangeStrudents">Manage participants</string>
    <string name="navBarChangeWorkers">Manage office employees</string>
    <string name="navBarEditClass">Edit class</string>
    <string name="navBarEditWorker">Edit employee</string>
    <string name="navBarEditStudent">Edit participant</string>
    <string name="navBarAddStudents">Add participants</string>
    <string name="navBarCheckFrequency">Schedule</string>
    <string name="navBarFrequency">Check frequency</string>
    <string name="navBarStudentsInfo">Participant data</string>
    <string name="navBarSellTickets">Select an event</string>
    <string name="navBarSellTicket">Sell a ticket</string>
    <string name="navBarTicketControl">Ticket verification</string>
    <string name="navBarOneClass">Change class date</string>
    <string name="navBarEditEvent">Edit event</string>

    <!-- Toast values -->
    <string name="ToastAddRoom">The room has been successfully added</string>
    <string name="ToastError">Error</string>
    <string name="ToastChangeName">Name changed successfully</string>
    <string name="ToastDeleteRoom">The room was successfully deleted</string>
    <string name="ToastNoAccess">No permissions</string>
    <string name="ToastFillDetails">Fill in the details</string>
    <string name="ToastAddClass">Class added</string>
    <string name="ToastAddEvent">Event added</string>
    <string name="ToastPasswordNotSame">The passwords are not the same</string>
    <string name="ToastAddWorker">Employee added</string>
    <string name="ToastEmailInDatabase">The email is already in the database</string>
    <string name="ToastAddStudent">Participant added</string>
    <string name="ToastEditClass">Classes changed</string>
    <string name="ToastEditOfficeWorker">Employee changed</string>
    <string name="ToastPassword6CharactersError">The password should be 6 characters long</string>
    <string name="ToastInvalidPassword">Wrong password</string>
    <string name="ToastEmailNotInDatabase">No email in the database</string>
    <string name="ToastEditEvent">Event changed</string>
    <string name="ToastDeleteEvent">Event deleted</string>
    <string name="ToastActiveAccount">Account activated</string>
    <string name="ToastResetPasswordActivateAccout">Wrong password. You must enter the password with which the account was created. A link to reset your password has been sent to your email</string>
    <string name="ToastDeleteWorker">Employee removed. The user can still log in to his account, but he no longer has access to the facility</string>
    <string name="ToastDeleteClass">Classes removed</string>
    <string name="ToastDeleteWorkerError">Remove the employee from all activities</string>
    <string name="ToastChangeStudent">Participant changed</string>
    <string name="ToastDeleteStudentFromClasses">The participant was removed from all classes</string>
    <string name="ToastDeleteStudentWithout">Participant removed (except name and surname)</string>
    <string name="ToastDeleteStudent">Participant removed</string>
    <string name="ToastChangeFrequency">Frequency changed</string>
    <string name="ToastGoodPhoneNumber">Please enter a valid phone number</string>
    <string name="ToastAddTicket">Ticket added</string>
    <string name="ToastDelete">Deleted</string>
    <string name="ToastSellTicket">Ticket sold</string>
    <string name="ToastDeleteTickets">Reservation deleted</string>
    <string name="ToastChangeTime">The date has been changed</string>
    <string name="ToastNoPlaces">No places to event</string>


    <!-- Image description -->
    <string name="calendarItemDescription">Image with x</string>
    <string name="curtainsImageLabel">curtains</string>
    <string name="peopleImageLabel">people</string>
    <string name="priceImageLabel">price</string>
    <string name="listImageLabel">list</string>
    <string name="pencilImageDescription">pencil</string>
    <string name="personAddImageLabel">personAdd</string>
    <string name="plusImageLabel">plus</string>
    <string name="buildImageLabel">build</string>
    <string name="qrImageLabel">QR code</string>
    <string name="startImageLabel">star</string>
    <string name="arrowImageLabel">arrow back</string>
    <string name="closeImageLabel">close</string>

</resources>