<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddStudentFragment"
    android:orientation="vertical">

    <include
        android:id="@+id/navBar"
        layout="@layout/nav_bar"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameLabel"
                android:textSize="20sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enterNameLabel" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameAddStudentFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surnameLabel"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enterSurnameLabel" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSurnameAddStudentFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailLabel"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enterEmailLabel"
                app:helperTextEnabled="true"
                app:helperText="@string/hintEmail" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailAddStudentFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumberLabel"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enterPhoneNumberLabel"
                app:helperTextEnabled="true"
                app:helperText="@string/hintPhoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneAddStudentFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:digits="0123456789"
                    android:maxLength="9"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateOfBirthLabel"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                />

            <Button
android:textColor="@color/white"
                android:id="@+id/btnDateAddStudentFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clickLabel"
                android:layout_marginTop="10dp"
                />

            <Button
android:textColor="@color/white"
                android:id="@+id/btnAddAddStudentFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addButtonLabel"
                android:layout_marginTop="15dp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>