<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingVertical="15dp"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitleLabel"
        android:textColor="@color/primaryColor"
        android:textSize="30sp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/loginLabel"
        android:textSize="20sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enterLoginLabel" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginLoginFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/passwordLabel"
        android:textSize="20sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enterPasswordLabel" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordLoginFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:textColor="@color/white"
        android:id="@+id/btnSignInLoginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/signInButtonLabel"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tvCreatingAdminAccountLoginFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/createAdminAccountLabel"
        android:textColor="@color/primaryColor"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tvActivateAccountLoginFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/activateTitleLabel"
        android:textColor="@color/primaryColor"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        />

</LinearLayout>