<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="15dp"
    tools:context=".fragments.NoneCultureHouseFragment"
    android:orientation="vertical">

   <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloLabel"
            android:textColor="@color/primaryColor"
            android:textSize="30sp"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryColor"
        android:textSize="15sp"
        android:text="@string/lackOfCultureHouseLabel"
        />

    <Button
android:textColor="@color/white"
        android:id="@+id/btnLogOutNoneCultureHouseHouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/logOutButtonLabel"
        android:textSize="18sp" />

</LinearLayout>